--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
       text-align: center;
       z-index: 1000;
       transition: background-color 0.3s ease;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
     }
 
     nav {
@@ -36,6 +39,11 @@
     nav a:hover {
       color: #ffcc00;
     }
+
+    #clock {
+      font-size: 1.5em;
+      color: #fff;
+    }
   </style>
 </head>
 <body>
@@ -47,34 +55,24 @@
       <a href="#services">Services</a>
       <a href="#contact">Contact</a>
     </nav>
+    <div id="clock"></div>
   </header>
 
   <!-- Your page content goes here -->
 
   <script>
-    document.addEventListener('DOMContentLoaded', function () {
-      const header = document.querySelector('header');
+    function updateClock() {
+      const now = new Date();
+      const hours = now.getHours().toString().padStart(2, '0');
+      const minutes = now.getMinutes().toString().padStart(2, '0');
+      const seconds = now.getSeconds().toString().padStart(2, '0');
+      const timeString = `${hours}:${minutes}:${seconds}`;
 
-      // Change background color on scroll
-      window.addEventListener('scroll', function () {
-        if (window.scrollY > 50) {
-          header.style.backgroundColor = '#555';
-        } else {
-          header.style.backgroundColor = '#333';
-        }
-      });
+      document.getElementById('clock').innerText = timeString;
+    }
 
-      // Change font color on hover
-      const navLinks = document.querySelectorAll('nav a');
-      navLinks.forEach(function (link) {
-        link.addEventListener('mouseenter', function () {
-          link.style.color = '#ffcc00';
-        });
-        link.addEventListener('mouseleave', function () {
-          link.style.color = '#fff';
-        });
-      });
-    });
+    setInterval(updateClock, 1000); // Update every second
+    updateClock(); // Initial call to display the clock immediately
   </script>
 
 </body>
