--- a/index.html
+++ b/index.html
@@ -54,6 +54,8 @@
       <a href="#about">About</a>
       <a href="#services">Services</a>
       <a href="#contact">Contact</a>
+      <a href="stopwatch.html">StopWatch</a> <!-- New link to the stopwatch page -->
+      <a href="tictactoe.html">Tic-Tac-Toe</a> <!-- New link to the Tic-Tac-Toe page -->
     </nav>
     <div id="clock"></div>
   </header>
