--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
       const hours = now.getHours().toString().padStart(2, '0');
       const minutes = now.getMinutes().toString().padStart(2, '0');
       const seconds = now.getSeconds().toString().padStart(2, '0');
-      const timeString = `${hours}:${minutes}:${seconds}`;
+      const amPm = hours >= 12 ? 'PM' : 'AM'
+            // Convert hours from 24-hour to 12-hour format
+      hours = hours % 12 || 12; // '0' hours should be shown as '12'
+
+      const timeString = `${hours.toString().padStart(2, '0')}:${minutes}:${seconds} ${amPm}`;
 
       document.getElementById('clock').innerText = timeString;
     }
