--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <script>
     function updateClock() {
       const now = new Date();
-      const hours = now.getHours().toString().padStart(2, '0');
+      let hours = now.getHours();
       const minutes = now.getMinutes().toString().padStart(2, '0');
       const seconds = now.getSeconds().toString().padStart(2, '0');
       const amPm = hours >= 12 ? 'PM' : 'AM'
